feat: Attempt to create a 16x16 grid

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-      <div class="main-grid"></div>
+      <div id="main-grid"></div>
       <div class="controls"></div>
     </main>
 
