feat: Create grid of 16x16 with border

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>Etch-a-Sketch</h1>
-    </header>
+    <div class="wrapper">
+      <header>
+        <h1>Etch-a-Sketch</h1>
+      </header>
 
-    <main>
-      <div id="main-grid"></div>
-      <div class="controls"></div>
-    </main>
-
+      <main>
+        <div id="main-grid"></div>
+        <div class="controls"></div>
+      </main>
+    </div>
     <footer>
       <p>Copyright © ved4a</p>
     </footer>
