feat: Create range slider with dynamic textContent

--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
 
       <main>
         <div id="main-grid"></div>
-        <div class="controls"></div>
+
+        <div class="range-slider">
+          <div class="slider-value">16</div>
+          <div class="field">
+            <div class="value left">0</div>
+            <input
+              type="range"
+              min="0"
+              max="64"
+              value="16"
+              step="1"
+              oninput="updateSliderValue(this.value)"
+            />
+            <div class="value right">64</div>
+          </div>
+        </div>
+
+        <div class="controls">
+          <button class="color-mode">Color</button>
+          <button class="rainbow-mode">Rainbow</button>
+          <button class="erase">Erase</button>
+          <button class="clear">Clear</button>
+        </div>
       </main>
     </div>
     <footer>
