feat: Create dynamic grid with event listeners

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               max="64"
               value="16"
               step="1"
+              class="slider"
               oninput="updateSliderValue(this.value)"
             />
             <div class="value right">64</div>
